third_party/move/move-compiler-v2/tests/visibility-checker/inline_with_enums_02.exp

Diagnostics:
warning: access of the field `0` on enum type `m::Wrapper` can only be done within the defining module `0xc0ffee::m`, but `m::use_me_not` could be called (and expanded) outside the module
   ┌─ tests/visibility-checker/inline_with_enums_02.move:10:23
   │
10 │     public inline fun use_me_not(): u64 {
   │                       ^^^^^^^^^^
11 │         let x = make(22);
12 │         x.0
   │         --- accessed here

error: Invalid operation: access of the field `0` on enum type `m::Wrapper` can only be done within the defining module `0xc0ffee::m`
   ┌─ tests/visibility-checker/inline_with_enums_02.move:19:9
   │
12 │         x.0
   │         --- accessed here
   ·
19 │     fun test(): u64 {
   │         ^^^^
20 │         m::use_me_not()
   │         --------------- from a call inlined at this callsite
